Button IE fix

--- a/public/style/button-send.styl
+++ b/public/style/button-send.styl
@@ -10,6 +10,7 @@
   color $primary-color
   padding 5px 20px
   margin 0
+  text-shadow none
 
   &:hover
   &:active
@@ -18,5 +19,5 @@
 
   &_disabled
   &:disabled
-    background $secondary-color
-    color $primary-color
+    background $secondary-color !important
+    color $primary-color !important
